<resources>
    <string name="app_name">Lista de Compras</string>
    <string name="txtNomeProduto">Nome do Produto</string>
    <string name="txtPreco">Preço do Produto</string>
    <string name="txtListaCompras">Lista de compras</string>
    <string name="txtCadastroProduto">Cadastrar produtos</string>
    <string name="txtComercio">Comércio</string>
    <string name="txtTipoComercio">Mercado, Farmacia ou Sacolão</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menuMercado">Mercado</string>
    <string name="menuFarmacia">Farmácia</string>
    <string name="menuSacolao">Sacolão</string>
    <string name="menuCadastrarProduto">Cadastrar produto</string>
    <string name="menuMinhaLista">Minha Lista</string>
</resources>
